# focus-monitor

./: .env.example  .gitignore  AGENTS.md  Dockerfile  HEART_RATE_INTEGRATION.md  IMAGE_SAVING.md  README.md  debug_sse.py  monitor_artifacts.py  pyproject.toml  start_heart_monitor.sh  test_fixed_parsing.py  test_heart_rate_parsing.py  test_integration.py  transfer.py
SmartSpectra/: .gitignore  Package.resolved  Package.swift  README.md
SmartSpectra/.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  DOC-ISSUE.yml  FEATURE-REQUEST.yml  SECURITY-VULN-REPORT.yml  SUPPORT-QUESTION.yml
SmartSpectra/.github/workflows/: mobsf.yml
SmartSpectra/android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
SmartSpectra/android/docs/: presage-dokka.css  presage-inject.js
SmartSpectra/android/fastlane/: Appfile  Fastfile  README.md
SmartSpectra/android/gradle/wrapper/: gradle-wrapper.properties
SmartSpectra/android/samples/: build_flavor_config.gradle
SmartSpectra/android/samples/demo-app/: .gitignore  build.gradle.kts
SmartSpectra/android/samples/smartspectra-trials/: build.gradle.kts
SmartSpectra/cpp/: .gitignore  CMakeLists.txt  README.md
SmartSpectra/cpp/cmake/extensions/: SmartSpectra_dependencies.cmake  SmartSpectra_filesystem.cmake  SmartSpectra_install.cmake  SmartSpectra_package_config.cmake  SmartSpectra_packaging.cmake  SmartSpectra_protobuf.cmake  SmartSpectra_testing.cmake  SmartSpectra_uninstall.cmake  SmartSpectra_version.cmake  download_and_extract_file.cmake  print_helpers.cmake
SmartSpectra/cpp/cmake/modules/: FindV4L.cmake
SmartSpectra/cpp/cmake/scripts/: get_venv_base.py
SmartSpectra/cpp/cmake/templates/: SmartSpectra.pc.in  SmartSpectraConfig.cmake.in  cmake_uninstall.cmake.in  generate_cpp_protobuf.sh.in  generate_py_protobuf.sh.in  smartspectra_protobuf_pyproject.toml  version.hpp.in
SmartSpectra/cpp/docs/: Doxyfile.in  build_docs.sh  build_linux.md  build_macos.md  command_line_reference.md  index.md  metrics_usage.md  presage-common.css  presage-inject.js  unified_footer.html  unified_header.html
SmartSpectra/cpp/samples/: CMakeLists.txt  README.md
SmartSpectra/cpp/samples/minimal_rest_spot_example/: CMakeLists.txt  README.md  main.cc
SmartSpectra/cpp/samples/rest_continuous_example/: CMakeLists.txt  README.md  main.cc
SmartSpectra/cpp/samples/rest_spot_example/: CMakeLists.txt  README.md  main.cc
SmartSpectra/cpp/smartspectra/: CMakeLists.txt
SmartSpectra/cpp/smartspectra/container/: CMakeLists.txt  background_container.cpp  background_container.hpp  background_container_impl.hpp  benchmarking.cpp  benchmarking.hpp  configuration.hpp.in  container.cpp  container.hpp  container_impl.hpp  foreground_container.cpp  foreground_container.hpp  foreground_container_impl.hpp  image_transfer.cpp  image_transfer.hpp  initialization.cpp  initialization.hpp  initialization_impl.hpp  json_file_io.cpp  json_file_io.hpp  keyboard_input.cpp  keyboard_input.hpp  operation_context.cpp  operation_context.hpp  output_stream_poller_wrapper.cpp  output_stream_poller_wrapper.hpp  packet_helpers.hpp  settings.cpp  settings.hpp
SmartSpectra/cpp/smartspectra/gui/: CMakeLists.txt  confidence_thresholding.cpp  confidence_thresholding.hpp  opencv_element_fits.cpp  opencv_element_fits.hpp  opencv_hud.cpp  opencv_hud.hpp  opencv_label.cpp  opencv_label.hpp  opencv_trace_plotter.cpp  opencv_trace_plotter.hpp  opencv_value_indicator.cpp  opencv_value_indicator.hpp
SmartSpectra/cpp/smartspectra/video_source/: CMakeLists.txt  factory.cpp  factory.hpp  input_transform.cpp  input_transform.hpp  input_transformer.cpp  input_transformer.hpp  resolution_selection_mode.cpp  resolution_selection_mode.hpp  settings.hpp  video_source.cpp  video_source.hpp
SmartSpectra/cpp/smartspectra/video_source/camera/: CMakeLists.txt  camera.hpp  camera_absl.cpp  camera_opencv.cpp  camera_opencv.hpp  camera_opencv_resolution.cpp  camera_v4l2.cpp  camera_v4l2.hpp  capture_video_source.cpp  capture_video_source.hpp
SmartSpectra/cpp/smartspectra/video_source/file_stream/: CMakeLists.txt  file_stream.cpp  file_stream.hpp  file_stream_test.cpp
SmartSpectra/cpp/tests/: CMakeLists.txt  test_main.hpp
SmartSpectra/cpp/tests/test_data/json/: metrics_2024-08-28.json  metrics_rest_api_2024-08-28.json
SmartSpectra/cpp/tests/test_utilities/: CMakeLists.txt  compile_time_string_concatenation.hpp  test_data_paths.hpp.in  test_utilities.cpp  test_utilities.hpp  test_utilities_impl.hpp
SmartSpectra/cpp/toolchains/: README.md  linux_arm64_toolchain.cmake  linux_arm64_toolchain_externals.cmake  pick_architecture.cmake
SmartSpectra/docs/: README.md  authentication.md
SmartSpectra/swift/: README.md
SmartSpectra/swift/SmartSpectra.xcworkspace/: contents.xcworkspacedata
SmartSpectra/swift/docs/: presage-docc.css  presage-inject.js
SmartSpectra/swift/samples/: .gitignore
SmartSpectra/swift/samples/build-configurations/: Base.xcconfig  Debug.xcconfig  Release.xcconfig
SmartSpectra/swift/samples/demo-app/: ContentView.swift  DemoApp.swift  DemoAppView.swift  (+4 more)
SmartSpectra/swift/samples/demo-app-UITests/: README.md  UITestHelpers.swift  demo_app_MeasurementTests.swift  demo_app_UITests.swift  demo_app_UITestsLaunchTests.swift
SmartSpectra/swift/samples/demo-app.xcodeproj/: project.pbxproj
SmartSpectra/swift/sdk/: Package.swift
configs/: orchestrator.yaml  shared_config.yaml  webui.yaml
configs/agents/: blink_attention_agent.yaml  blink_baseline_agent.yaml  blink_rate_agent.yaml  breathing_rate_agent.yaml  changelog-basic.yaml  changelog-enriched.yaml  changelog-github.yaml  cheese-checker.yaml  cheese-logger.yaml  cheese-notifier.yaml  docs-agent.yaml  fusion_attention_agent.yaml  heartrate_agent.yaml  hr_baseline_agent.yaml  hr_change_agent.yaml  talk_attention_agent.yaml  talk_feature_agent.yaml
docs/: llm-setup.md  persistence.md  vibe-coding.md
docs/deployment/: cli.md  docker.md  railway.md
images/: README.md
src/: __init__.py  focus_overlay.py  focus_overlay.runlog.txt  focus_overlay_tool.py  git_tools.py  latest_response.json  main.py  streamlit_dashboard.py
(+79 files in other folders)
