[project]
name = "sam-hackathon-quickstart"
version = "0.1.0"
description = "Solace Agent Mesh hackathon quickstart template"
requires-python = "==3.11.*"
dependencies = [
    "solace-agent-mesh==1.13.3",
    "PyGithub==2.8.1",
    "opencv-python==4.10.0.84",
    "numpy>=1.24.0",
    "requests>=2.31.0",
]
